[metadata]
name = cat-installer
version = 0.2.1
description = Python script to install the CARTO Analytics Toolbox in Redshift and Postgres
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    carto
    analytics
    toolbox
    redshift
author = CARTO
url = https://github.com/cartodb/analytics-toolbox-core
license = BSD 3-Clause
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
[options]
packages = find:
python_requires = >=3.7
install_requires =
    pyyaml>=6.0
    click>8.1
    tqdm>4.64
    sqlparse>0.4
    redshift-connector>2.0
    psycopg2-binary>=2.9.1
    pyjwt==2.7.0
zip_safe = False
[options.entry_points]
console_scripts =
    cat-installer = src:main
[flake8]
max-line-length = 88
ignore = E203
